[package]
name = "gravity_gamepad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7.0", features = ["dynamic"] }  # Remove this during release
# bevy = "0.7.0"
bevy-inspector-egui = "0.10.0"
bevy_rapier2d = "*"